<resources>
    <string name="app_name">Imc App 2.0</string>
    <!-- name="activity_name"-->
    <string name="login_title">Login</string>
    <string name="login_subtitle">Faça login para continuar</string>
    <string name="login_et_email">E-mail</string>
    <string name="login_et_password">Senha</string>
    <string name="login_btn_enter">Entrar</string>
    <string name="login_chkbox_remember_me">Lembrar-me</string>
    <string name="login_tv_noAccount">Não tem uma conta?</string>
    <string name="login_btn_forgetPassword">Esqueci a senha</string>
    <string name="login_btn_createAccount">Criar uma conta agora</string>

    <!--    <string name="login_"-->

    <!-- Dashboard Activity -->
    <string name="dashboard_card1_title">Pesar agora</string>
    <string name="dashboard_card2_title">Ver histórico</string>
    <string name="dashboard_card1_description">Atualizar peso agora.</string>
    <string name="dashboard_card2_description">Reveja seu progresso.</string>
    <string name="user_name">Leonardo De Caprio</string>
    <string name="user_ocupation">Actor</string>
</resources>