<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/navigation_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        android:background="@color/green_700">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crafty_girls"
            android:textStyle="bold"
            android:text="HEALTH\nCALC"
            android:textAlignment="textEnd"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>


        <ImageView
            android:id="@+id/iv_titulo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/bmi"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/tv_titulo"
            android:layout_alignBottom="@id/tv_titulo"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_wave_top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/ic_wavetop"
        android:scaleType="fitXY"
        android:layout_below="@id/navigation_header_container"/>

    <ImageView
        android:id="@+id/iv_wave_bottom"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/ic_wavebottom"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Desenvolvido por Israel Pablo Coelho"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/iv_wave_top"
        android:layout_above="@id/iv_wave_bottom"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textAppearance="@style/title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_subtitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/login_et_email"
                app:endIconMode="clear_text"            >

                <EditText
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/login_et_password"
                app:passwordToggleEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_entrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_btn_enter"
                android:layout_marginTop="8dp"
                style="@style/button_login"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_chkbox_remember_me"
                android:layout_gravity="end"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_btn_forgetPassword"
                android:layout_gravity="end"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAllCaps="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_tv_noAccount"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_btn_createAccount"
                    android:layout_gravity="end"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textAllCaps="false"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>